--- a/liu1.html
+++ b/liu1.html
@@ -331,11 +331,11 @@
         // 师姐的负面和正面评语
         const negativeFeedback = [
             "。。。",
-            "细心一点！",
-            "这是基础",
+            "这是很危险的事",
+            "。。。",
             "。。。。。",
             "......",
-            "你再想想？",
+            "你再想想",
             "是这样吗",
             "........"
         ];
@@ -355,31 +355,31 @@
         // 随机事件
         const randomEventsData = [
             {
-                title: "突发问题",
+                title: "随机事件",
                 desc: "在实验室吃零食被检察人员发现了",
                 scoreEffect: -15,
                 correctEffect: -10
             },
             {
-                title: "紧急情况",
+                title: "随机事件",
                 desc: "刘老师发现你对基础知识一丁点都不知道",
                 scoreEffect: -10,
                 correctEffect: -15
             },
             {
-                title: "突发意外",
+                title: "随机事件",
                 desc: "你没配平离心机，把实验室炸了",
                 scoreEffect: -20,
                 correctEffect: -5
             },
             {
-                title: "被发现了",
+                title: "随机事件",
                 desc: "刘老师发现你组会在摸鱼，没认真听",
                 scoreEffect: -15,
                 correctEffect: -15
             },
             {
-                title: "突发意外",
+                title: "随机事件",
                 desc: "你把珍贵的一抗给倒了..",
                 scoreEffect: -5,
                 correctEffect: -20
