--- a/liu1.html
+++ b/liu1.html
@@ -356,7 +356,7 @@
         const randomEventsData = [
             {
                 title: "随机事件",
-                desc: "在实验室吃零食被检察人员发现了",
+                desc: "忘记参加组会了",
                 scoreEffect: -15,
                 correctEffect: -10
             },
@@ -368,7 +368,7 @@
             },
             {
                 title: "随机事件",
-                desc: "你没配平离心机，把实验室炸了",
+                desc: "刘老师发现你以为看懂了文献其实啥也没懂",
                 scoreEffect: -20,
                 correctEffect: -5
             },
@@ -457,7 +457,7 @@
 
             // 蛋白纯化问题
             {
-                question: "亲和色谱法纯化蛋白质的原理是基于：",
+                question: "亲和层析纯化蛋白质的原理是基于：",
                 answers: [
                     { text: "蛋白质与配体之间的特异性相互作用", isCorrect: true },
                     { text: "蛋白质分子量的差异", isCorrect: false },
