--- a/liu1.html
+++ b/liu1.html
@@ -444,6 +444,16 @@
                 ],
                 type: questionTypes.WB
             },
+             {
+                question: "刘老师的mbti是什么？",
+                answers: [
+                    { text: "intp", isCorrect: true },
+                    { text: "infp", isCorrect: false },
+                    { text: "isfj", isCorrect: false },
+                    { text: "istj", isCorrect: false }
+                ],
+                type: questionTypes.WB
+            },
             {
                 question: "pei全称是什么？：",
                 answers: [
